# retirement-reality-planner

./: CONTRIBUTING.md  README.md  corpus_runtime.py  fvm.py  pyproject.toml
.github/workflows/: tests.yml
data/india/: README.md  nifty50_tri_cpi_annual.csv
data/sample/: historical_returns_sample.csv
src/financial_calculators/: __init__.py  cli.py  corpus.py  historical_data.py  india_data.py  inflation.py  retirement.py
tests/: test_corpus.py  test_historical_data.py  test_india_data.py  test_inflation.py  test_retirement.py
tools/: build_india_history.py  corpus_runtime.py  fvm.py
