[project]
name = "retirement-reality-planner"
version = "0.1.0"
description = "Retirement planning simulator with inflation-aware corpus longevity and Monte Carlo risk analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
fincalc = "financial_calculators.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
